# MGL7460_Groupe5_Projet-2

Cpp/: CMakeLists.txt
Cpp/data/: test_file2.txt  test_file3.txt
Cpp/include/: TimeFromSeconds.hpp  UpTime.hpp
Cpp/src/: TimeFromSeconds.cpp  UpTime.cpp  main.cpp
Cpp/test/: TimeFromSecondsTests.cpp  UpTimeTests.cpp
Ruby/: Rakefile
Ruby/data/: test_file1.txt  uptime_file.txt
Ruby/lib/: main.rb  time_from_seconds.rb  up_time.rb
Ruby/spec/: time_from_seconds_spec.rb  up_time_spec.rb
